# libSQUIC

./: .gitignore  CMakeLists.txt  README.md  make_cholmod.sh  make_res.m  res_conv.m  test.py
include/: SQUIC.h
result/: result_run.sh  result_vis.m
src/: ae_scrap.cpp  bninv.cpp  cholesky.cpp  cholesky_matrix.cpp  coordinatedescentupdate.cpp  coordinatedescentupdate_matrix.cpp  generates.cpp  generates_matrix.cpp  long_integer.h  mymkl.h  qqsorti.f  qsort1.f  qsort2.f  scrap.c  squic.cpp  squic.hpp  squic_interface.hpp  squic_matrix.cpp
